--- a/debian_podman_xvfb.ipynb
+++ b/debian_podman_xvfb.ipynb
@@ -8,21 +8,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# build podman pub"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "podman build -t xbookworm_2 -f ./Dockerfile_xBookworm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# podman start container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "podman run --rm --cap-add=SYS_NICE --cap-add=IPC_LOCK -it  localhost/xbookworm_2:latest"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Rust",
-   "language": "rust",
-   "name": "rust"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "name": "rust"
+   "name": "bash"
   }
  },
  "nbformat": 4,
