add slim version

--- a/debian_podman_xvfb.ipynb
+++ b/debian_podman_xvfb.ipynb
@@ -31,6 +31,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "show images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "podman images "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# podman start container"
    ]
   },
@@ -46,6 +66,59 @@
    "source": [
     "podman run --rm --cap-add=SYS_NICE --cap-add=IPC_LOCK -it  localhost/xbookworm_2:latest"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# podman create shell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# start XWindows XVFB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# POD hash -  hash of the last running pod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "POD=$(podman ps -q -n 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now we can stop the container again.\n",
+    "podman stop ${POD}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
