--- a/debian_podman_xvfb.ipynb
+++ b/debian_podman_xvfb.ipynb
@@ -106,7 +106,17 @@
    "metadata": {},
    "source": [
     "# Now we can stop the container again.\n",
-    "podman stop ${POD}"
+    "podman stop ${POD}\n",
+    "\n",
+    "# one liner\n",
+    "POD=$(podman ps -q -n 1) && podman stop ${POD}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# add shell to latest start container"
    ]
   },
   {
@@ -118,7 +128,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "podman exec -it $(podman ps -q -n 1) /bin/bash"
+   ]
   }
  ],
  "metadata": {
