finish for today

--- a/debian_podman_xvfb.ipynb
+++ b/debian_podman_xvfb.ipynb
@@ -131,6 +131,13 @@
    "source": [
     "podman exec -it $(podman ps -q -n 1) /bin/bash"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sudo apt-get install -y tigervnc-viewer"
+   ]
   }
  ],
  "metadata": {
